# games101

./: .gitignore  .gitmodules  CMakeLists.txt
obsidian/0：线性代数/: 向量.md  矩阵.md
obsidian/1：变换/: 1.1 2D线性变换.md  1.2 3D旋转变换.md  1.3 2D齐次坐标系.md  1.4 视图变换.md  1.5 投影变换.md  模型变换.md
task0/: CMakeLists.txt  Transform2d.cpp  Transform2d.h  task0.cpp
task1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
